# configuration

./: .gitignore  .gitmodules  .hlint.yaml  .travis.yml  Cabal2Spec.hs  Config.hs  GNUmakefile  HDBC-postgresql-fix-missing-dependency.patch  HackageOracle.hs  Main.hs  Oracle.hs  Orphans.hs  ParseUtils.hs  README.md  aeson-fix-missing-semigroups-dependency.patch  alex-files-section-fix.patch  cabal.project  cabal2obs.cabal  cairo-aligned-fix-files-section.patch  cereal-fix-missing-fail-dependency.patch  generate-package  generate.hs  gtk3-provides-gtk-too.patch  hlibsass-fix-missing-dependency.patch  iterable-fix-files-section.patch  multiplate-fix-files-section.patch  package.yaml  pandoc-fix-files-section.patch  weeder.dhall
.config/st2obs/: dont_ghc.conf
.github/workflows/: haskell-ci.yml  hlint.yml
Oracle/: Compiler.hs  FlagAssignment.hs  ForcedExecutables.hs  PackageList.hs
config/lts-6/: banned-packages.txt  binary.conf  compiler.txt  extra-packages.txt  flag-assignment.txt  stackage-packages.txt
config/lts-7/: banned-packages.txt  compiler.txt  extra-packages.txt  flag-assignment.txt  forced-executable-packages.txt  stackage-packages.txt
config/lts-8/: banned-packages.txt  compiler.txt  extra-packages.txt  flag-assignment.txt  forced-executable-packages.txt  stackage-packages.txt
config/nightly/: banned-packages.txt  dont_banned.conf  extra-packages.txt  flag-assignment.txt  forced-executable-packages.txt  stackage-packages.txt
lts-6/config/: extra-packages.txt  stackage-packages.txt
lts-6/patches/: HDBC-sqlite3-fix-missing-dependency.patch  colour-fix-files-section.patch  commutative-fix-missing-setup-file.patch  happy-fix-incomplete-files-section.patch  type-aligned-fix-files-section.patch
lts-6/patches/alex/: enable-tests-and-man-page.patch
lts-6/patches/asn1-types/: provide-obsolete-static-name.patch
lts-6/patches/bustle/: update-description-dependencies-and-file-section.patch
lts-6/patches/darcs/: fix-missing-dependency-2.patch
lts-6/patches/docopt/: fix-files-section.patch
lts-6/patches/glib/: add-missing-gtk2hs-buildtools-dependency.patch
lts-6/patches/js-jquery/: fix-files-section.patch
lts-6/patches/pem/: fix-files-section.patch
nightly/config/: dont_packed.conf  stackage-packages.txt
nightly/patches/: FenwickTree-fix-files-section.patch  buffer-builder-fix-missing-dependency.patch  byteable-fix-files-section.patch  darcs-fix-files-section.patch  gtk3-fix-build-on-ppc-architecture.patch  gtk3-fix-files-section.patch  hsass-fix-missing-dependency.patch  hyphenation-fix-files-section.patch  js-flot-fix-files-section.patch  pretty-show-files-section-fix.patch
nightly/patches/OpenGLRaw/: add-constraints-and-rpmlint.patch
nightly/patches/cairo/: add-missing-gtk2hs-buildtools-dependency.patch
nightly/patches/cpphs/: fix-license-and-install-man-files.patch
nightly/patches/crypto-cipher-types/: fix-file-section.patch
nightly/patches/darcs/: fix-missing-dependency.patch
nightly/patches/enclosed-exceptions/: provide-obsolete-static-name.patch
patches/common/Agda/: fix-license-tag.patch
patches/common/Allure/: fix-license-tag.patch
patches/common/BlogLiterately/: fix-license-tag.patch  (+1 more)
patches/ghc-8.6.x/: add-missing-haskell-setup-script.patch
patches/ghc-9.6.x/: drop-dependency-on-empty-attoparsec-aeson-library.patch
src/: .travis.yml  ChangesFile.hs  Config.hs  ExtractVersionUpdates.hs  Oracle.hs  Orphans.hs  ParseStackageConfig.hs  ParseUtils.hs  Types.hs  UpdateChangesFile.hs
src/Config/: ForcedExecutables.hs  Ghc810x.hs  Ghc84x.hs  Ghc86x.hs  Ghc88x.hs  LTS10.hs  LTS12.hs  LTS13.hs  LTS14.hs  LTS8.hs
src/Oracle/: Hackage.hs
src/cabal2obs/: Config.hs  Oracle.hs  ParseStackageConfig.hs  ParseUtils.hs  Types.hs  cabal2obs.hs
src/lib/: ExtractVersionUpdates.hs  MyCabal.hs  UpdateChangesFile.hs
src/regression-test/: regression-test.hs
src/update-changes-file/: update-changes-file.hs
st2obs/: get_source  st2obs
tests/: .gitignore  regression-test.hs  run-tests
tests/guess-changelog/: .gitignore  aeson.test  haskell-src-meta.test  ignore-unrelated-whitespace-additions.test  undocumented-releases.test
tests/update-changes-file/: .gitignore  catch-attempts-to-downgrade.test  changelog-file-has-disappeared.test  fail-on-invalid-packages.test  fail-on-invalid-syntax.test  recognize-unduly-edited-logs.test  simple-update.test  todo-strip-tabs.test  undocumented-releases.test  unrecognizable-version-statements.test  we-can-cope-with-crlf-linefeeds.test
tools/: cabal2obs.hs  commit  force-ghc-8.10.x-project-refresh.sh  record-patch  resolve-link-conflict  run-update  setup-git  submit-factory-update  sync-devel-project-into-factory  sync-ghc-8.10.x-into-devel-project  sync-ghc-8.4.x-into-devel-project  sync-ghc-8.6.x-into-devel-project  sync-ghc-8.8.x-into-devel-project  sync-ghc-9.10.x-into-devel-project  sync-ghc-9.12.x-into-devel-project  sync-ghc-9.4.x-into-devel-project  sync-ghc-9.6.x-into-devel-project  sync-ghc-9.8.x-into-devel-project  sync-lts-10-into-devel-project  sync-lts-11-into-devel-project  sync-lts-8-into-devel-project  sync-lts-9-into-devel-project  sync-repository  update-changes-file  update-changes-file.hs
tools/cabal2obs/: .gitignore  Cabal2Spec.hs  ChangesFile.hs  Config.hs  Main.hs  Oracle.hs  Orphans.hs  ParseStackageConfig.hs  ParseUtils.hs  Types.hs  cabal.project  cabal2obs.cabal  package.yaml
tools/cabal2obs/Config/: Ghc84x.hs  LTS10.hs  LTS11.hs  LTS12.hs  LTS8.hs  LTS9.hs  Nightly.hs
tools/cabal2obs/Config/LTS10/: Stackage.hs
tools/cabal2obs/Config/LTS11/: Stackage.hs
tools/cabal2obs/Config/LTS12/: Stackage.hs
tools/cabal2obs/Config/LTS8/: Stackage.hs
tools/cabal2obs/Config/LTS9/: Stackage.hs
tools/cabal2obs/Config/Nightly/: Stackage.hs
tools/cabal2obs/Oracle/: Compiler.hs  FlagAssignment.hs  ForcedExecutables.hs  Hackage.hs  PackageList.hs
tools/changelog/: changelog.cabal  find-current-version-id.hs  guess-changelog.hs  regression-test.hs  update-changes-file.hs
tools/changelog/src/: ExtractVersionUpdates.hs  GuessChangelog.hs  UpdateChangesFile.hs
(+1580 files in other folders)
