name:          cabal2obs
version:       0
synopsis:      Convert a set of Cabal files into an OBS project
description:   Convert a set of Cabal files into an OBS project. This tool is used mainly
               to generate
               <https://build.opensuse.org/project/show/devel:languages:haskell> and its
               sub-projects.
license:       GPL-3
license-file:  LICENSE
author:        Peter Simons, Ondřej Súkup
maintainer:    opensuse-haskell@opensuse.org
tested-with:   GHC == 8.4.3
category:      Distribution
homepage:      https://github.com/opensuse-haskell/configuration
build-type:    Simple
cabal-version: >= 1.10

source-repository head
  type:     git
  location: https://github.com/opensuse-haskell/cabal2obs

executable cabal2obs
  main-is:            cabal2obs.hs
  other-modules:      Config
                      Config.ForcedExecutables
                      Config.Ghc84x
                      Config.Ghc86x
                      Config.LTS12
                      Config.LTS12.Stackage
                      Config.LTS13
                      Config.LTS13.Stackage
                      ExtractVersionUpdates
                      Oracle
                      Oracle.Hackage
                      Orphans
                      ParseStackageConfig
                      ParseUtils
                      Types
                      UpdateChangesFile
  hs-source-dirs:     src, tools
  build-depends:      base                  < 5
                    , Cabal                 > 2.2
                    , cabal2spec            > 2
                    , containers
                    , directory
                    , distribution-opensuse > 1.1
                    , extra
                    , filepath
                    , pretty
                    , regex-posix
                    , shake                 >= 0.16
                    , text
                    , time
                    , turtle
  default-language:   Haskell2010
  default-extensions: MonadFailDesugaring
  other-extensions:   CPP
                      GeneralizedNewtypeDeriving
                      TypeFamilies
                      OverloadedStrings
                      DeriveGeneric
                      DeriveAnyClass
  ghc-options:        -Wall -Wcompat -Wincomplete-uni-patterns -Wincomplete-record-updates
                      -Wredundant-constraints -threaded -with-rtsopts=-qg
                      -with-rtsopts=-qb

executable update-changes-file
  main-is:            update-changes-file.hs
  other-modules:      ExtractVersionUpdates
                      UpdateChangesFile
  hs-source-dirs:     src, tools
  build-depends:      base                  < 5
                    , Cabal
                    , directory
                    , distribution-opensuse
                    , extra
                    , optional-args
                    , pretty
                    , regex-posix
                    , text
                    , time
                    , turtle
  default-language:   Haskell2010
  default-extensions: MonadFailDesugaring
  other-extensions:   CPP
                      GeneralizedNewtypeDeriving
                      TypeFamilies
                      OverloadedStrings
                      DeriveGeneric
                      DeriveAnyClass
  ghc-options:        -Wall -Wcompat -Wincomplete-uni-patterns -Wincomplete-record-updates
                      -Wredundant-constraints -threaded

test-suite regression-test
  type:               exitcode-stdio-1.0
  main-is:            regression-test.hs
  other-modules:      ExtractVersionUpdates
  hs-source-dirs:     src, tests
  build-depends:      base, Cabal, regex-posix, text
  default-language:   Haskell2010
  default-extensions: MonadFailDesugaring
  ghc-options:        -Wall -Wcompat -Wincomplete-uni-patterns -Wincomplete-record-updates
                      -Wredundant-constraints -threaded
