name:          cabal2obs
version:       0
synopsis:      Convert a set of Cabal files into an OBS project
description:   Convert a set of Cabal files into an OBS project. This tool is used mainly
               to generate
               <https://build.opensuse.org/project/show/devel:languages:haskell> and its
               sub-projects.
license:       GPL-3
license-file:  LICENSE
author:        Peter Simons, Ondřej Súkup
maintainer:    opensuse-haskell@opensuse.org
tested-with:   GHC == 9.4.8 || == 9.6.7 || == 9.8.4
category:      Distribution
homepage:      https://github.com/opensuse-haskell/configuration
build-type:    Simple
cabal-version: >= 1.10

source-repository head
  type:     git
  location: https://github.com/opensuse-haskell/cabal2obs

library
  exposed-modules:  ExtractVersionUpdates
                    MyCabal
                    UpdateChangesFile
  hs-source-dirs:   src/lib
  build-depends:    base                  >= 4.13 && < 5
                  , Cabal                 >= 3.8 && < 3.11
                  , directory
                  , distribution-opensuse >= 1.1.3 && < 1.2
                  , extra
                  , pretty
                  , regex-posix
                  , shake
                  , text
                  , time
                  , turtle
  default-language: Haskell2010
  other-extensions: CPP
                    GeneralizedNewtypeDeriving
                    TypeFamilies
                    OverloadedStrings
                    DeriveGeneric
                    DeriveAnyClass

executable cabal2obs
  main-is:          cabal2obs.hs
  other-modules:    Config
                    Config.ForcedExecutables
                    Config.Ghc810x
                    Config.Ghc90x
                    Config.Ghc92x
                    Config.Ghc94x
                    Config.Ghc96x
                    Config.Ghc98x
                    Config.Ghc910x
                    Config.Ghc912x
                    Oracle
                    Oracle.Hackage
                    ParseStackageConfig
                    Types
  hs-source-dirs:   src/cabal2obs
  build-depends:    base
                  , bytestring
                  , cabal2obs
                  , cabal2spec            >= 2.7 && < 2.8
                  , containers
                  , directory
                  , distribution-opensuse
                  , extra
                  , shake                 >= 0.16
                  , tar                   > 0.6
                  , text
                  , time
  default-language: Haskell2010
  other-extensions: CPP
                    GeneralizedNewtypeDeriving
                    TypeFamilies
                    OverloadedStrings
                    DeriveGeneric
                    DeriveAnyClass
  ghc-options:      -threaded -with-rtsopts=-qg -with-rtsopts=-qb

executable update-changes-file
  main-is:          update-changes-file.hs
  hs-source-dirs:   src/update-changes-file
  build-depends:    base, cabal2obs, optional-args, text, turtle
  default-language: Haskell2010
  other-extensions: CPP
                    GeneralizedNewtypeDeriving
                    TypeFamilies
                    OverloadedStrings
                    DeriveGeneric
                    DeriveAnyClass
  ghc-options:      -threaded

test-suite regression-test
  type:             exitcode-stdio-1.0
  main-is:          regression-test.hs
  hs-source-dirs:   src/regression-test
  build-depends:    base, cabal2obs
  default-language: Haskell2010
  ghc-options:      -threaded
