name:          changelog
version:       0
synopsis:      Library and tools for manipulating openSUSE change log files
license:       GPL-3
author:        Peter Simons
maintainer:    psimons@suse.com
category:      Distribution
build-type:    Simple
cabal-version: >= 1.10

library
  exposed-modules:    ExtractVersionUpdates
  hs-source-dirs:     src
  build-depends:      base < 5, Cabal > 2.2, regex-posix, text
  default-language:   Haskell2010
  default-extensions: MonadFailDesugaring
  ghc-options:        -Wall -Wcompat -Wincomplete-uni-patterns -Wincomplete-record-updates
                      -Wredundant-constraints

executable find-current-version-id
  main-is:            find-current-version-id.hs
  build-depends:      base, Cabal, changelog
  default-language:   Haskell2010
  default-extensions: MonadFailDesugaring
  ghc-options:        -Wall -Wcompat -Wincomplete-uni-patterns -Wincomplete-record-updates
                      -Wredundant-constraints

test-suite regression-test
  type:               exitcode-stdio-1.0
  main-is:            regression-test.hs
  build-depends:      base, Cabal, changelog
  default-language:   Haskell2010
  default-extensions: MonadFailDesugaring
  ghc-options:        -Wall -Wcompat -Wincomplete-uni-patterns -Wincomplete-record-updates
                      -Wredundant-constraints
