name:          changelog
version:       0
synopsis:      Library and tools for manipulating openSUSE change log files
license:       GPL-3
author:        Peter Simons
maintainer:    psimons@suse.com
category:      Distribution
build-type:    Simple
cabal-version: >= 1.10

library
  exposed-modules:    ExtractVersionUpdates
                      GuessChangelog
                      UpdateChangesFile
  hs-source-dirs:     src
  build-depends:      base          < 5
                    , Cabal         > 2.2
                    , Diff
                    , containers
                    , directory
                    , extra
                    , foldl
                    , mtl
                    , pretty
                    , regex-posix
                    , text
                    , time
                    , turtle
  default-language:   Haskell2010
  default-extensions: MonadFailDesugaring
  ghc-options:        -Wall -Wcompat -Wincomplete-uni-patterns -Wincomplete-record-updates
                      -Wredundant-constraints

executable find-current-version-id
  main-is:            find-current-version-id.hs
  build-depends:      base, Cabal, changelog
  default-language:   Haskell2010
  default-extensions: MonadFailDesugaring
  ghc-options:        -Wall -Wcompat -Wincomplete-uni-patterns -Wincomplete-record-updates
                      -Wredundant-constraints

executable guess-changelog
  main-is:            guess-changelog.hs
  build-depends:      base, changelog, containers, text, turtle
  default-language:   Haskell2010
  default-extensions: MonadFailDesugaring
  ghc-options:        -Wall -Wcompat -Wincomplete-uni-patterns -Wincomplete-record-updates
                      -Wredundant-constraints -threaded

executable update-changes-file
  main-is:            update-changes-file.hs
  build-depends:      base
                    , Cabal
                    , changelog
                    , optional-args
                    , text
                    , turtle
  default-language:   Haskell2010
  default-extensions: MonadFailDesugaring
  ghc-options:        -Wall -Wcompat -Wincomplete-uni-patterns -Wincomplete-record-updates
                      -Wredundant-constraints -threaded

test-suite regression-test
  type:               exitcode-stdio-1.0
  main-is:            regression-test.hs
  build-depends:      base, Cabal, changelog
  default-language:   Haskell2010
  default-extensions: MonadFailDesugaring
  ghc-options:        -Wall -Wcompat -Wincomplete-uni-patterns -Wincomplete-record-updates
                      -Wredundant-constraints
